@@ -424,6 +424,8 @@ x^16 + 1180785226777964111519743237847228/2099046671299559859076390314304898
 [-2*x, 2*x]
 [-z, z]
 x^2 + 1
+[-1/81*x^4, 1/162*x^4 - 1/2*x, 1/162*x^4 + 1/2*x]
+[-1/2187*x^4, 1/4374*x^4 - 1/2*x, 1/4374*x^4 + 1/2*x]
 1
 [x^10 + Mod(-5/2*y + 5/2, y^2 - 5)*x^9 + Mod(-5*y + 20, y^2 - 5)*x^8 + Mod(-
 20*y + 30, y^2 - 5)*x^7 + Mod(-45/2*y + 145/2, y^2 - 5)*x^6 + Mod(-71/2*y + 
@@ -563,4 +565,4 @@ Mod(-6/5, x)
   ***   at top-level: nfalgtobasis(nf,['a,'a]~)
   ***                 ^-------------------------
   *** nfalgtobasis: incorrect type in nfalgtobasis (t_COL).
-Total time spent: 13961
+Total time spent: 12224
