@@ -106,6 +106,9 @@ nfisisom(K,x^2-8)
 nfisisom(x^2-8,K)
 nfisisom(nfinit(y^2 + 1), z^2 + 1)
 K = nfinit(x^2 + 1); nfisisom(K, y^2 + 1); K.pol
+\\#2144
+nfisincl(x^3+9,x^6+2187)
+nfisincl(x^3+9*27,x^6+2187*3^6)
 
 \\#1631
 setrand(1);bnfinit(x^16-48*x^14+934*x^12-9632*x^10+57251*x^8-198568*x^6+386172*x^4-377776*x^2+137288).no
